--- a/amdloader/customBarConfig.htm
+++ b/amdloader/customBarConfig.htm
@@ -1,16 +1,19 @@
- <!-- <input type="button" value="menu"  class="btn btn-default"
+ <!-- 
+ 	<div class="" id="HeaderNavBarDiv-Left">
+ 	<input type="button" value="menu"  class="btn btn-default"
 			onclick="myFunction()"> -->
 			<!--menudropdown.js-->
 			
 			<!-- <input type="button" value="valvs" id="valvs" class="btn btn-default">
 			<input type="button" value="Hydrant" id="valvs"
 			class="btn btn-default"> 
+			</div>
 -->
 			 
- <div class="toolicons">  
+ <div class="toolicons" id="HeaderNavBarDiv_Right">  
  	
 	<img src="./images/legend.png" height="35px" width="35px"
 					onclick="openLegend()" alt="legend" style="position: absolute; right: 0; cursor: pointer; top:47px;">
 	<img src="./images/Basemap.png" height="35px" width="35px"
 					onclick="openBasemap()" alt="basemaps" style="position: absolute; right: 38px; cursor: pointer; top:46px;"> 
-	
+	</div>
