--- a/amdloader/customBarConfig.htm
+++ b/amdloader/customBarConfig.htm
@@ -12,8 +12,10 @@
 			 
  <div class="toolicons" id="HeaderNavBarDiv_Right">  
  	
-	<img src="./images/legend.png" height="35px" width="35px"
-					onclick="openLegend()" alt="legend" style="position: absolute; right: 0; cursor: pointer; top:47px;">
+ 	<input type= "button" onclick="openLegend()" value="legend"
+ 					style="position: absolute; right:3px; cursor: pointer; top:52px;">
+	<img src="./images/legend.png" height="35px" width="35px" 
+					onclick="openLayer()" alt="legend" style="position: absolute; right:76px; cursor: pointer; top:46px;">
 	<img src="./images/Basemap.png" height="35px" width="35px"
-					onclick="openBasemap()" alt="basemaps" style="position: absolute; right: 38px; cursor: pointer; top:46px;"> 
+					onclick="openBasemap()" alt="basemaps" style="position: absolute; right: 113px; cursor: pointer; top:46px;"> 
 	</div>
