--- a/amdloader/widgetPanelContent.htm
+++ b/amdloader/widgetPanelContent.htm
@@ -1,4 +1,4 @@
-<div class="panel-group" id="widgetPanelCotentDiv">
+<div class="panel-group" id="accordion">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
@@ -46,8 +46,7 @@
         </h4>
       </div>
       <div id="collapse4" class="panel-collapse collapse">
-        <div class="panel-body"><a data-toggle="modal" data-target="#myModal"
-		class="btn btn-default messagebtn">message</a></div>
+        <div id="legendDiv"></div>
       </div>
     </div>
   </div> 
