--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<a class="navbar-brand"><img
 				src="" id="clientmainlogo" height="30px" width="45px"></a>
 				<h6 id="projectname">
-				<font face="Monospace">Project Tracker </font>
+				<font face="arial">Project Tracker </font>
 					<br>
 				<font face="times">	<span class="ban" id="citytagname"></span></font></h6>
 			</div>
@@ -69,7 +69,7 @@
 		
 		<div class="toolbar" id="HeaderNavBarDiv">
 		 	<div id="basemapgallary_buttons"></div>
-		<a style="position: absolute; right: 95px; cursor: pointer; top:55px; color:black;" > <span>Quick Select</span>
+		<a style="position: absolute; right: 159px; cursor: pointer; top:55px; color:black;" > <span>Quick Select</span>
 	
 	<select id="quickselect">  <!--quick select -->
 		
@@ -100,7 +100,7 @@
 		
 
 		<!--index_map.js -->
-		<div id="map" data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
+		<div id="map" data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'" onclick="closepanels()">
 			<div id="basemapPanelDiv">
 				<div style="height: 40px;">
 					<h4
@@ -115,6 +115,7 @@
 			<div id="layerlistdiv">
 			<div id="layerlist"></div>
 			</div>
+			
 			<div id="search"></div>
 			<div id="LocateButton"></div>
      		<div id="HomeButton"></div>
