--- a/amdloader/customBarConfig.htm
+++ b/amdloader/customBarConfig.htm
@@ -12,10 +12,10 @@
 			 
  <div class="toolicons" id="HeaderNavBarDiv_Right">  
  	
- 	<input type= "button" onclick="openLegend()" value="legend"
- 					style="position: absolute; right:3px; cursor: pointer; top:52px;">
-	<img src="./images/legend.png" height="35px" width="35px" 
-					onclick="openLayer()" alt="legend" style="position: absolute; right:76px; cursor: pointer; top:46px;">
+	<b id="layerlist">	
+	<img src="./images/legend.png" alt="layer List" height="35px" width="35px" 
+					onclick="openLayer()" style="position: absolute; right:3px ; cursor: pointer; top:46px;"> </b>
+					<span id="layer_list"></span>
 	<img src="./images/Basemap.png" height="35px" width="35px"
-					onclick="openBasemap()" alt="basemaps" style="position: absolute; right: 113px; cursor: pointer; top:46px;"> 
+					onclick="openBasemap()" alt="basemaps" style="position: absolute;right:48px; cursor: pointer; top:46px;"> 
 	</div>
