--- a/amdloader/widgetPanelContent.htm
+++ b/amdloader/widgetPanelContent.htm
@@ -49,4 +49,14 @@
         <div id="legendDiv"></div>
       </div>
     </div>
+     <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">Layer List</a>
+        </h4>
+      </div>
+      <div id="collapse5" class="panel-collapse collapse">
+        <div id="layer_list"></div>
+      </div>
+    </div>
   </div> 
