--- a/amdloader/widgetPanelContent.htm
+++ b/amdloader/widgetPanelContent.htm
@@ -1,62 +1,54 @@
-<div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">QueryWidgets</a>
-        </h4>
-      </div>
-      <div id="collapse1" class="panel-collapse collapse">
-        <div class="panel-body">
-      <div id="querydiv">
-		<a data-toggle="modal" data-target="#myModal"
-		class="btn btn-default messagebtn">message</a>
-
+ <div class="panel-group" id="accordion">
+	<div class="panel panel-default">
+		<div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+			<h4 class="panel-title"><a >QueryWidgets</a></h4>
+		</div>
+		<div id="collapse1" class="panel-collapse collapse">
+			<div class="panel-body">
+				<div id="querydiv">
+					<a data-toggle="modal" data-target="#myModal"
+					class="btn btn-default messagebtn">message</a>
+				</div>
+			</div>
+		</div>
 	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+			<h4 class="panel-title"><a>Webnotes</a></h4>
+		</div>
+		<div id="collapse2" class="panel-collapse collapse">
+			<div class="panel-body">
+				<a data-toggle="modal" data-target="#myModal" class="btn btn-default messagebtn">message</a>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading"  data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+			<h4 class="panel-title"><a>Assignment</a></h4>
+		</div>
+		<div id="collapse3" class="panel-collapse collapse">
+			<div class="panel-body">
+				<a data-toggle="modal" data-target="#myModal" class="btn btn-default messagebtn">message</a>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+			<h4 class="panel-title"><a>Assignment</a></h4>
+		</div>
+		<div id="collapse4" class="panel-collapse collapse">
+			<div class="panel-body">
+				<div id="legendDiv"></div>
+			</div>
+		</div>
         </div>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Webnotes</a>
-        </h4>
-      </div>
-      <div id="collapse2" class="panel-collapse collapse">
-        <div class="panel-body">
-        <a data-toggle="modal" data-target="#myModal"
-		class="btn btn-default messagebtn">message</a>
-        </div>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Assignment</a>
-        </h4>
-      </div>
-      <div id="collapse3" class="panel-collapse collapse">
-        <div class="panel-body"><a data-toggle="modal" data-target="#myModal"
-		class="btn btn-default messagebtn">message</a></div>
-      </div>
-    </div>
-     <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Legend</a>
-        </h4>
-      </div>
-      <div id="collapse4" class="panel-collapse collapse">
-        <div id="legendDiv"></div>
-      </div>
-    </div>
-     <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">Layer List</a>
-        </h4>
-      </div>
-      <div id="collapse5" class="panel-collapse collapse">
-        <div id="layer_list"></div>
-      </div>
-    </div>
-  </div> 
+		<div class="panel panel-default">
+			<div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+				<h4 class="panel-title"><a>LayerList</a></h4>
+			</div>
+			<div id="collapse5" class="panel-collapse collapse">
+				<div class="panel-body">
+					<div id="layer_list"></div>
+				</div>
+			</div>
+		</div>
