--- a/amdloader/customBarConfig.htm
+++ b/amdloader/customBarConfig.htm
@@ -12,8 +12,8 @@
 			 
  <div class="toolicons" id="HeaderNavBarDiv_Right">  
  	
-	<b id="layerlist"> <img src="./images/legend.png" alt="layer List" height="35px" width="35px" 
-					onclick="openLayer()" style="position: absolute; right:3px ; cursor: pointer; top:46px;"> </b>
+	<!-- <b id="layerlist"> <img src="./images/legend.png" alt="layer List" height="35px" width="35px" 
+					onclick="openLayer()" style="position: absolute; right:3px ; cursor: pointer; top:46px;"> </b> -->
 	<img src="./images/Basemap.png" height="35px" width="35px"
 					onclick="openBasemap()" alt="basemaps" style="position: absolute;right:48px; cursor: pointer; top:46px;"> 
 	</div>
