--- a/amdloader/customBarConfig.htm
+++ b/amdloader/customBarConfig.htm
@@ -16,4 +16,5 @@
 					onclick="openLayer()" style="position: absolute; right:3px ; cursor: pointer; top:46px;"> </b> -->
 	<img src="./images/Basemap.png" height="35px" width="35px"
 					onclick="openBasemap()" alt="basemaps" style="position: absolute;right:48px; cursor: pointer; top:46px;"> 
+				<p style="position: absolute;right:0px; top:50px;">	bing <input type="checkbox" id="bingid" > </p>
 	</div>
