--- a/index.html
+++ b/index.html
@@ -99,12 +99,13 @@
 		<div>
 
 			<div class="navbar-header pull-right">
-				<a id="" class="nav-expander fixed"> WIDGETS </a>
+				<a id="nav-expandermain" class="nav-expander fixed"> WIDGETS </a>
 				<a class="nav-expander fixed" id="nav-expandermini">&#9776;</a>
 			</div>
 		</div>
 
 		<!--index_map.js -->
+		 
 		<div id="map" data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'" onclick="closepanels()">
 			<div id="basemapPanelDiv">
 				<div style="height: 40px;">
@@ -127,7 +128,9 @@
 
 		</div>
 		<!--index_map.js end -->
-
+<div id="datatable">
+	<table><tr><td id="objectidvalue"></td></tr></table>
+</div>
 		<!-- message div  message.js  -->
 		<div id="message_popup"></div>
 		<!-- message div  message.js  -->
