--- a/amdloader/widgetPanelContent.htm
+++ b/amdloader/widgetPanelContent.htm
@@ -34,11 +34,11 @@
 	</div>
 	<div class="panel panel-default">
 		<div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-			<h4 class="panel-title"><a>Assignment</a></h4>
+			<h4 class="panel-title"><a>Legend</a></h4>
 		</div>
 		<div id="collapse4" class="panel-collapse collapse">
 			<div class="panel-body">
-				<div id="legendDiv"></div>
+				<a data-toggle="modal" data-target="#myModal" class="btn btn-default messagebtn">message</a>
 			</div>
 		</div>
         </div>
@@ -48,7 +48,7 @@
 			</div>
 			<div id="collapse5" class="panel-collapse collapse">
 				<div class="panel-body">
-					<div id="layer_list"></div>
+					<a data-toggle="modal" data-target="#myModal" class="btn btn-default messagebtn">message</a>
 				</div>
 			</div>
 		</div>
