--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
 				<hr style="margin: 0px 0px 5px 0px;">
 				<div id="basemapGallery"></div>
 			</div>
-
-			<div id="layerlistitemsdiv">
-			</div>
-
+<div id="layerlist">
+	<h4>layerlist</h4>
+			<div id="layerListDom"></div>
+			
+</div>
 			<div id="search"></div>
 			<div id="LocateButton"></div>
 			<div id="HomeButton"></div>
