--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
 			<div id="search"></div>
 			<div id="LocateButton"></div>
 			<div id="HomeButton"></div>
-
+<div id="featuretable">
+			<span style="position: relative; top: 10px; right: 10px;" id="featuretableclose">X</span>
+			<div id="myTableNode"></div>
 		</div>
 		<!--index_map.js end -->
 <div id="datatable">
