--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://js.arcgis.com/3.19/dijit/themes/claro/claro.css">
+		<link rel="stylesheet" href="https://js.arcgis.com/3.20/dojo/resources/dojo.css">
 		<link rel="stylesheet" href="https://js.arcgis.com/3.19/esri/css/esri.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="CSS/main.css">
@@ -126,14 +127,14 @@
 			<div id="search"></div>
 			<div id="LocateButton"></div>
 			<div id="HomeButton"></div>
-<div id="featuretable">
+			
+			
+ <div id="featuretable">
 			<span style="position: relative; top: 10px; right: 10px;" id="featuretableclose">X</span>
 			<div id="myTableNode"></div>
-		</div>
+		</div> 
 		<!--index_map.js end -->
-<div id="datatable">
-	<table><tr><td id="objectidvalue"></td></tr></table>
-</div>
+
 		<!-- message div  message.js  -->
 		<div id="message_popup"></div>
 		<!-- message div  message.js  -->
