--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 			<div id="HomeButton"></div>
 			
 			
- <div id="featuretable">
-			<span style="position: relative; top: 10px; right: 10px;" id="featuretableclose">X</span>
+ <div id="table">
+			<span id="featuretable" style="position: relative; top: 10px; right: 10px;" id="featuretableclose">X</span>
 			<div id="myTableNode"></div>
 		</div> 
 		<!--index_map.js end -->
