--- a/index.html
+++ b/index.html
@@ -131,10 +131,8 @@
 			
 			
  <div id="featuretable">
-			<span style="position: relative; top: 10px; right: 10px;" id="featuretableclose">X</span>
-			
-			<div id="myTableNode"></div>
-			
+			<div style="position: relative;" id="featuretableclose"></div>			
+			<div id="myTableNode"></div> 			
 		</div> 
 		<!--index_map.js end -->
 
